issue fixe - https://trello.com/c/e3dl2g0W/5-change-location-of-the-language-dropdown-to-be-selected-under-configuration / working on it - https://trello.com/c/e1r3aKVM/22-hotlist-members-needs-better-header-and-spacing-see-original-desing

--- a/client/style/css/custom.css
+++ b/client/style/css/custom.css
@@ -1665,3 +1665,49 @@ body {
   height: 100%;
   /* The html and body elements cannot have any padding or margin. */
 }
+
+
+
+
+/********************************** Settings custom dropdown menu ***************************************/
+.dropdown-menu > li {	position:relative;
+    -webkit-user-select: none; /* Chrome/Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+    /* Rules below not implemented in browsers yet */
+    -o-user-select: none;
+    user-select: none;
+    cursor:pointer;
+}
+.dropdown-menu .sub-menu {
+    right: 100%;
+    width: auto !important;
+    position: absolute;
+    top: 0;
+    display:none;
+    margin-top: -1px;
+    border-top-right-radius:0;
+    border-bottom-right-radius:0;
+    box-shadow:none;
+}
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 568px) {
+    .dropdown-menu .sub-menu {
+        left: -100%;
+    }
+}
+
+.right-caret:after,.left-caret:after {
+    content:"";
+    border-bottom: 5px solid transparent;
+    border-top: 5px solid transparent;
+    display: inline-block;
+    height: 0;
+    vertical-align: middle;
+    width: 0;
+    margin-left:5px;
+}
+.right-caret:after { border-left: 5px solid #ffaf46;}
+.left-caret:after {	border-right: 5px solid #ffaf46;}
